@@ -4,10 +4,11 @@ Sigil-0.9.5
     - Remove incorrect use of opf:scheme from dc:creator and dc:contributor under epub2
     - Fix issues with hunspell spell checking under Windows when non-ascii paths to dictionaries
     - Fix issues with overridding the prefs directory on Windows with non-ascii paths
+    - Fix broken manual "Check" button on W3C stylesheet validation's generated html form.
 
    New Features
-    - Allow user to choose what version of CSS gets used in the "Validate Stylesheets
-         With W3C" tool for EPUB2s (EPUB3s will use CSS 3.0) via user preference (General).
+    - Allow user to choose what level of CSS gets used in the "Validate Stylesheets
+         With W3C" tool via user preference (General).
 
 Sigil-0.9.4
    Bug Fixes
